--- a/datachecker-mock-data/pom.xml
+++ b/datachecker-mock-data/pom.xml
@@ -29,7 +29,7 @@
     <description>datachecker-mock-data</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <datachecker.version>0.0.1</datachecker.version>
     </properties>
     <dependencies>
@@ -65,8 +65,8 @@
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opengauss</groupId>
