--- a/pom.xml
+++ b/pom.xml
@@ -21,28 +21,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <gs.datacheck.version>${project.version}</gs.datacheck.version>
-        <spring.boot.version>3.5.3</spring.boot.version>
         <spring.cloud.version>2025.0.0</spring.cloud.version>
         <tomcat.version>10.1.43</tomcat.version>
         <java.version>17</java.version>
         <mysql.connector.java.version>9.3.0</mysql.connector.java.version>
-        <opengauss.jdbc.version>5.1.0-og</opengauss.jdbc.version>
+        <opengauss.jdbc.version>6.0.0-og</opengauss.jdbc.version>
         <oracle.jdbc.version>11.2.0.3</oracle.jdbc.version>
-        <druid.version>1.2.8</druid.version>
-        <mybatis.version>2.2.2</mybatis.version>
+        <druid.version>1.2.27</druid.version>
+        <mybatis.version>3.0.5</mybatis.version>
         <lombok.version>1.18.24</lombok.version>
         <fastjson.version>2.0.51</fastjson.version>
         <guava.version>32.0.0-jre</guava.version>
         <springdoc.openapi.ui.version>1.6.15</springdoc.openapi.ui.version>
         <zero.allocation.hashing.version>0.15</zero.allocation.hashing.version>
         <io.confluent.version>7.9.2</io.confluent.version>
-        <snakeyaml.version>2.0</snakeyaml.version>
-        <snappy-java.version>1.1.10.5</snappy-java.version>
         <powermock.version>2.0.0</powermock.version>
         <commons.cli.version>1.4</commons.cli.version>
-        <bcpkix-jdk18on.version>1.80</bcpkix-jdk18on.version>
-        <commons.fileupload.version>1.6.0</commons.fileupload.version>
-        <commons.lang3.version>3.18.0</commons.lang3.version>
         <commons.compress.version>1.26.1</commons.compress.version>
         <commons.collection.version>4.4</commons.collection.version>
         <log4j2.version>2.23.1</log4j2.version>
@@ -91,45 +85,16 @@
                 <version>${opencsv.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.yaml</groupId>
-                <artifactId>snakeyaml</artifactId>
-                <version>${snakeyaml.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-ui</artifactId>
                 <version>${springdoc.openapi.ui.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-slf4j-impl</artifactId>
-                <version>${log4j2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>${log4j2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
-                <version>${log4j2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
                 <version>${commons.compress.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>${commons.lang3.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-fileupload</groupId>
-                <artifactId>commons-fileupload</artifactId>
-                <version>${commons.fileupload.version}</version>
-            </dependency>
+            <!-- disruptor  Log4j2 用于实现高性能的异步日志功能 -->
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
@@ -191,16 +156,6 @@
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-avro-serializer</artifactId>
                 <version>${io.confluent.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.xerial.snappy</groupId>
-                <artifactId>snappy-java</artifactId>
-                <version>${snappy-java.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.bouncycastle</groupId>
-                <artifactId>bcpkix-jdk18on</artifactId>
-                <version>${bcpkix-jdk18on.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
