--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <gs.datacheck.version>${project.version}</gs.datacheck.version>
         <spring.cloud.version>2025.0.0</spring.cloud.version>
+        <spring.boot.version>3.5.3</spring.boot.version>
         <tomcat.version>10.1.43</tomcat.version>
         <java.version>17</java.version>
         <mysql.connector.java.version>9.3.0</mysql.connector.java.version>
@@ -39,7 +40,6 @@
         <commons.cli.version>1.4</commons.cli.version>
         <commons.compress.version>1.26.1</commons.compress.version>
         <commons.collection.version>4.4</commons.collection.version>
-        <log4j2.version>2.23.1</log4j2.version>
         <oshi.version>6.5.0</oshi.version>
         <hutool-all.version>5.8.38</hutool-all.version>
         <opencsv.version>5.12.0</opencsv.version>
@@ -62,6 +62,13 @@
     </repositories>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
