--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <gs.datacheck.version>${project.version}</gs.datacheck.version>
-        <spring.cloud.version>2025.1.0-M2</spring.cloud.version>
+        <spring.cloud.version>2025.0.0</spring.cloud.version>
         <spring.boot.version>3.5.5</spring.boot.version>
         <java.version>17</java.version>
         <mysql.connector.java.version>9.3.0</mysql.connector.java.version>
